# piecewise_sampling

./: .gitignore  Cargo.toml  README.md
benches/: alias1d.rs  alias_1d.rs  inversion_1d.rs
examples/: compare_perf.rs  stratification.rs  warping.rs
src/: adapter2d.rs  alias.rs  alias_sampler.rs  data2d.rs  distribution.rs  hierarchical.rs  inversion.rs  inversion_sampler.rs  lib.rs  main.rs  reservoir.rs  utils.rs
