[package]
name = "pdf_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
exr = "1.5"
sobol_burley = "0.4"
rand = "0.8"
num-traits = { version = "0.2", default-features = false, features = ["libm" ] }

[dev-dependencies]
statrs = "0.16"
criterion = "0.4"
num-bigfloat = { version = "1.6", default-features = false, features = ["rand"] }

[[bench]]
name = "alias_1d"
harness = false

[[bench]]
name = "inversion_1d"
harness = false
