[package]
name = "discrete_sampling"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm" ] }
rkyv = { version = "0.8", default-features = false, features = ["alloc" ], optional = true }

[dev-dependencies]
statrs = "0.18"
criterion = "0.5"
exr = "1.72"
sobol_burley = "0.5"
rand = "0.8"

[[bench]]
name = "alias_1d"
harness = false

[[bench]]
name = "inversion_1d"
harness = false

